chnages industry practice